--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 node_modules
 package-lock.json
 vendor/
-documentatie-orgplus.txt
-documentatie-orgplus.pdf
+Documentație - OrgPlus.docx
+Documentație - OrgPlus.txt
